# py-presentations

./: fast-python.md  profiling.md  pyspeed.md
pyspeed/: Cargo.toml  README.md  pyproject.toml  setup.py
pyspeed/benchs/: bench_dtw.py  bench_dtw_311.py  conftest.py
pyspeed/dtwimpls/: cydtw_v1.c  cydtw_v1.html  cydtw_v1.pyx  cydtw_v2.c  cydtw_v2.html  cydtw_v2.pyx  mypyc_dtw.py  nbdtw.py  npdtw.py  pydtw.py
pyspeed/src/: lib.rs
pyspeed/tests/: conftest.py  test_dtw.py
